# tkmodule

./: .gitignore  LICENSE  README.md  README.txt  pyproject.toml  setup.cfg  setup.py
tkmodule/: __init__.py  tkmodule.py
tkmodule.egg-info/: PKG-INFO  SOURCES.txt
